# uv-click-example

./: LICENSE  README.md  pyproject.toml
src/uv_click_example/: __init__.py
